--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,26 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Socket.IO Chat Example</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <ul class="pages">
-    <li class="chat page">
-      <div class="chatArea">
-        <ul class="messages"></ul>
-      </div>
-      <input class="inputMessage" placeholder="Type here..."/>
-    </li>
-    <li class="login page">
-      <div class="form">
-        <h3 class="title">What's your nickname?</h3>
-        <input class="usernameInput" type="text" maxlength="14" />
-      </div>
-    </li>
-  </ul>
 
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <button data-tune-id="1" class='js-vote'>vote</button>
+  <button data-tune-id="2" class='js-vote'>vote</button>
+  <button data-tune-id="3" class='js-vote'>vote</button>
+
+  <div id="UploadBox">
+      <h2>Video Uploader</h2>
+      <span id='UploadArea'>
+          <label for="FileBox">Choose A File: </label><input type="file" id="FileBox"><br>
+          <label for="NameBox">Name: </label><input type="text" id="NameBox"><br>
+
+          <button  type='button' id='UploadButton' class='Button'>Upload</button>
+      </span>
+  </div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="/client.js"></script>
+
 </body>
 </html>
