class and id names fixed. Ignore tmp files

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,12 @@
   <button data-tune-id="2" class='js-vote'>vote</button>
   <button data-tune-id="3" class='js-vote'>vote</button>
 
-  <div id="UploadBox">
+  <div id="upload-box">
       <h2>Video Uploader</h2>
-      <span id='UploadArea'>
-          <label for="FileBox">Choose A File: </label><input type="file" id="FileBox"><br>
-          <label for="NameBox">Name: </label><input type="text" id="NameBox"><br>
-
-          <button  type='button' id='UploadButton' class='Button'>Upload</button>
+      <span id='upload-area'>
+          <label for="file-box">Choose A File: </label><input type="file" id="file-box"><br>
+          <label for="name-box">Name: </label><input type="text" id="name-box"><br>
+          <button type='button' id='upload-button'>Upload</button>
       </span>
   </div>
 
