render voting buttons dynamically, based on actual tunes found on the server

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,8 @@
 </head>
 <body>
 
-  <button data-tune-id="1" class='js-vote'>vote</button>
-  <button data-tune-id="2" class='js-vote'>vote</button>
-  <button data-tune-id="3" class='js-vote'>vote</button>
+<div id="tunes-container"></div>
+
 
   <div id="upload-box">
       <h2>Video Uploader</h2>
