Keep track of winner. Timer for winner tune going off at stand up time. Added domain for error handling. Test audio element. tunes folder

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,14 @@
       </span>
   </div>
 
+  <audio controls>
+    <source src="horse.ogg" type="audio/ogg">
+    <source src="horse.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="/client.js"></script>
 
