voting module and documentation

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
 
 
   <div id="upload-box">
-      <h2>Video Uploader</h2>
       <span id='upload-area'>
           <label for="file-box">Choose A File: </label><input type="file" id="file-box"><br>
           <label for="name-box">Name: </label><input type="text" id="name-box"><br>
@@ -17,7 +16,7 @@
       </span>
   </div>
 
-  <audio controls>
+  <audio controls style="display: none">
     <source src="horse.ogg" type="audio/ogg">
     <source src="horse.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
