styes, UI functions

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
-<div id="tunes-container"></div>
+  <ul id="tunes-container"></ul>
 
 
   <div id="upload-box">
@@ -15,12 +15,6 @@
           <button type='button' id='upload-button'>Upload</button>
       </span>
   </div>
-
-  <audio controls style="display: none">
-    <source src="horse.ogg" type="audio/ogg">
-    <source src="horse.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
 
 
 
