styled file uploader

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 
   <div id="upload-box">
       <span id='upload-area'>
-          <label for="file-box">Choose A File: </label><input type="file" id="file-box"><br>
-          <label for="name-box">Name: </label><input type="text" id="name-box"><br>
-          <button type='button' id='upload-button'>Upload</button>
+          <input type="file" id="file-box">
+          <input type="text" id="name-box">
+          <a id='upload-button'>Upload</a>
       </span>
   </div>
 
