basic style and layout. additional sound files.

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <div id="upload-box">
       <span id='upload-area'>
           <input type="file" id="file-box">
-          <input type="text" id="name-box">
+          <input type="text" id="name-box" placeholder="Upload new jingle">
           <a id='upload-button'>Select File</a>
       </span>
   </div>
