styles organized. Highlight winner.

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class>
 <head>
   <link rel="stylesheet" href="/styles/style.css">
+  <title>Stand-Up Tunes</title>
 </head>
 <body>
 
   <ul id="tunes-container"></ul>
-
 
   <div id="upload-box">
       <span id='upload-area'>
@@ -15,8 +15,6 @@
           <a id='upload-button'>Select File</a>
       </span>
   </div>
-
-
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/client.js"></script>
