--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,15 @@
 </head>
 <body>
 
+<h2>Stand-up Tunes® </h2>
+<p>Vote for your favorite Mobile Web jingle and hear it play in <span id="countdown"></span><span id="units"></span></p>
+
   <ul id="tunes-container"></ul>
 
   <div id="upload-box">
       <span id='upload-area'>
           <input type="file" id="file-box">
-          <input type="text" id="name-box" placeholder="Upload new jingle">
+          <input type="text" id="name-box" placeholder="Upload your own jingle! (mp3 and wav accepted - no change given)">
           <a id='upload-button'>Select File</a>
       </span>
   </div>
