replaced set interval with node-cron for afplay execution

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<h2>Stand-up Tunes® </h2>
-<p>Vote for your favorite Mobile Web jingle and hear it play in <span id="countdown"></span><span id="units"></span></p>
+<h2>Stand-up Tunes® <span class='tiny'>v0.2</span></h2>
+<p>Vote for your favorite Mobile Web jingle and hear it play at <span id="play-time"></span></p>
 
   <ul id="tunes-container"></ul>
 
@@ -20,6 +20,8 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
+  <script src="/UI.js"></script>
+  <script src="/util.js"></script>
   <script src="/client.js"></script>
 
 </body>
