--- a/test/client-tests.html
+++ b/test/client-tests.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>QUnit</title>
-  <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.15.0.css">
+  <link rel="stylesheet" href="qunit-1.15.0.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
 
-  <script src="//code.jquery.com/qunit/qunit-1.15.0.js"></script>
+  <script src="qunit-1.15.0.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="../UI.js"></script>
   <script src="../util.js"></script>
-  <script src="clientTest.js"></script>
+  <script src="utilTest.js"></script>
+  <script src="uiTest.js"></script>
   <!--script src="/client.js"></script-->
 </body>
 </html>
