client-side unit tests

--- a/test/client-tests.html
+++ b/test/client-tests.html
@@ -15,6 +15,7 @@
   <script src="../util.js"></script>
   <script src="utilTest.js"></script>
   <script src="uiTest.js"></script>
-  <!--script src="/client.js"></script-->
+  <script src="clientTest.js"></script>
+  <script src="/client.js"></script>
 </body>
 </html>
