add type to file upload

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
 <div id="upload-box">
     <div id="upload-area">
-        <input type="file" id="file-box" style="display:none">
+        <input type="file" id="file-box" accept="audio/*" style="display:none">
         <input type="text" id="name-box" placeholder="Upload your own jingle! (mp3 and wav accepted - no change given)">
     </div>
     <div id="upload-button">
