--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,8 @@
 </head>
 <body>
 
-<h2>Stand-up Tunes® <span class='tiny lookit'>v0.5</span></h2>
-<p>Vote for your favorite Mobile Web jingle and hear it play at <span id="play-time"></span>. <a href="#" class="hidden" id="rules">The rules</a></p>
-
-<ul class="rules hidden">
-  <li class="small">You get three votes every day</li>
-  <li class="small">Unused votes carry over to the next day</li>
-  <li class="small">Getting a jingle to win today by spending just one vote earns you an extra vote for tomorrow</li>
-  <li class="small">You are your IP</li>
-  <li class="small">The console tells you things</li>
-</ul>
+<h2>Stand-up Tunes® <span class='tiny lookit'>v0.6</span></h2>
+<p>Vote for your favorite Mobile Web jingle and hear it play at <span id="play-time"></span>.</p>
 
 <ul id="tunes-container"></ul>
 
