web components & shadow dom

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en" class>
 <head>
+<!--     <link rel="import" href="tune.html"> -->
+    <link rel="import" href="tune-shadow.html">
     <link rel="stylesheet" href="/styles/style.css">
     <title>Stand-Up Tunes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -8,6 +10,8 @@
     <link rel="apple-touch-icon" sizes="76x76" href="images/touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="120x120" href="images/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="images/touch-icon-ipad-retina.png">
+
+
 </head>
 <body>
 
