--- a/public/tune-shadow.html
+++ b/public/tune-shadow.html
@@ -5,10 +5,10 @@
       border-radius: 5px;
       margin: 10px;
       height: 80px;
-      border: 1px solid #ddd;
+      border: 1px solid #ccc;
       background-color: #fff;
       overflow: hidden;
-      width: 200px;
+      width: 230px;
   }
 
   .voters {
@@ -31,19 +31,23 @@
 
   .image {
       display: inline-block;
-      width: 70px;
-      border-right: 1px solid #ddd;
+      width: 80px;
       height: 100%;
-      box-shadow: 0 0 5px 1px rgba(0,0,0,0.1);
+      box-shadow: 0 0 5px 1px rgba(0,0,0,0.5);
       position: relative;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
   }
 
   .play {
-      background-color: lightgray;
+      box-shadow: 0px 0px 20px black;
+      background-color: rgba(255,255,255,0.6);
+      border: 3px solid rgba(155,155,155,0.6);
       border-radius: 50%;
-      width: 32px;
-      height: 32px;
-      background-size: 32px;
+      width: 30px;
+      height: 30px;
+      background-size: 30px;
       position: absolute;
       margin: auto;
       top: 0;
@@ -54,7 +58,7 @@
 
   .play::before {
       content: "►";
-      color: gray;
+      color: rgba(255,255,255,0.9);
       position: absolute;
       width: 12px;
       height: 12px;
