--- a/public/tune-shadow.html
+++ b/public/tune-shadow.html
@@ -1,5 +1,10 @@
 <template>
 <style>
+
+  :host {
+    border: 1px solid red!important;
+  }
+
   .tune {
       position: relative;
       border-radius: 5px;
@@ -75,7 +80,7 @@
     <div class="voters"><content select="tune-voters"></content></div>
     <div class="name"><content select="tune-name"></content></div>
     <div class="image">
-      <content select="audio"></content>
+      <audio style="display: none" controls><source src="tunes/test.mp3" type="audio/mpeg"></source></audio>
       <content select="tune-controls"></content>
       <div class="play"></div>
       <div class="pause"></div>
