--- a/public/tune-shadow.html
+++ b/public/tune-shadow.html
@@ -1,9 +1,9 @@
 <template>
 <style>
 
-  :host {
+/*  :host {
     border: 1px solid red!important;
-  }
+  }*/
 
   .tune {
       position: relative;
