--- a/public/tune-shadow.html
+++ b/public/tune-shadow.html
@@ -43,12 +43,13 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      background-image: 'url(images/default-tune.png)';
   }
 
   .play {
       box-shadow: 0px 0px 20px black;
-      background-color: rgba(255,255,255,0.6);
-      border: 3px solid rgba(155,155,155,0.6);
+      background-color: rgba(255,255,255,0.5);
+      border: 3px solid rgba(155,155,155,0.5);
       border-radius: 50%;
       width: 30px;
       height: 30px;
