style update and unused vars

--- a/public/tune-shadow.html
+++ b/public/tune-shadow.html
@@ -43,12 +43,11 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      background-image: 'url(images/default-tune.png)';
   }
 
   .play {
-      box-shadow: 0px 0px 20px black;
-      background-color: rgba(255,255,255,0.5);
+      box-shadow: 0px 0px 10px rgba(0,0,0,0.8);
+      background-color: rgba(255,255,255,0.8);
       border: 3px solid rgba(155,155,155,0.5);
       border-radius: 50%;
       width: 30px;
@@ -64,7 +63,7 @@
 
   .play::before {
       content: "►";
-      color: rgba(255,255,255,0.9);
+      color: #ccc;
       position: absolute;
       width: 12px;
       height: 12px;
