--- a/public/tune-shadow.html
+++ b/public/tune-shadow.html
@@ -63,7 +63,7 @@
 
   .play::before {
       content: "►";
-      color: #ccc;
+      color: #aaa;
       position: absolute;
       width: 12px;
       height: 12px;
