--- a/public/tune-shadow.html
+++ b/public/tune-shadow.html
@@ -47,7 +47,7 @@
 
   .play {
       box-shadow: 0px 0px 10px rgba(0,0,0,0.8);
-      background-color: rgba(255,255,255,0.8);
+      background-color: rgba(255,255,255,0.5);
       border: 3px solid rgba(155,155,155,0.5);
       border-radius: 50%;
       width: 30px;
@@ -63,7 +63,7 @@
 
   .play::before {
       content: "►";
-      color: #aaa;
+      color: white;
       position: absolute;
       width: 12px;
       height: 12px;
