--- a/public/tune-shadow.html
+++ b/public/tune-shadow.html
@@ -61,35 +61,30 @@
       left: 0;
   }
 
+  .play::before,
   .play::after {
-      content: "►";
-      color: white;
-      position: absolute;
-      width: 12px;
-      height: 12px;
-      line-height: 12px;
-      font-size: 11px;
-      margin: auto;
       top: 0;
       right: 0;
       bottom: 0;
       left: 0;
+      margin: auto;
+      position: absolute;
+      content: "►";
+      width: 12px;
+      height: 12px;
+      line-height: 12px;
+
+  }
+
+  .play::after {
+      color: white;
+      font-size: 11px;
       padding-left: 4px;
   }
 
   .play::before {
-      content: "►";
       color: rgba(155,155,155,0.5);
-      position: absolute;
       font-size: 16px;
-      width: 12px;
-      height: 12px;
-      line-height: 12px;
-      margin: auto;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
   }
 
 </style>
