white background for empty images

--- a/public/tune-shadow.html
+++ b/public/tune-shadow.html
@@ -39,6 +39,7 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      background-color: white;
   }
 
   .play {
