--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class>
 <head>
-<!--     <link rel="import" href="tune.html"> -->
+    <script src="/lib/webcomponents.js"></script>
     <link rel="import" href="tune-shadow.html">
     <link rel="stylesheet" href="/styles/style.css">
     <title>Stand-Up Tunes</title>
