--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
 
-<h2>Stand-up Tunes® <span class='tiny lookit'>v0.9</span></h2>
-<p>Vote for your favorite Mobile Web jingle and hear it play at <span id="play-time"></span>.</p>
+<h2>Stand-up Tunes® <span class='tiny'>v0.9.1</span></h2>
+
 
 <ul id="tunes-container"></ul>
 
