--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="import" href="tune-shadow.html">
     <link rel="stylesheet" href="/styles/style.css">
     <title>Stand-Up Tunes</title>
+    <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="apple-touch-icon" href="images/touch-icon-iphone.png">
     <link rel="apple-touch-icon" sizes="76x76" href="images/touch-icon-ipad.png">
@@ -15,7 +16,7 @@
 </head>
 <body>
 
-<h2>Stand-up Tunes® <span class='tiny'>v0.9.1</span></h2>
+<h2>Stand-up Tunes® <span class='tiny'>v0.9.2 - with ServiceWorker cache</span></h2>
 
 <div id="fbbutton" class="userpic"></div>
 
