push only at 9:30am

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<h2>Stand-up Tunes® <span class='tiny'>v0.9.2 - with ServiceWorker cache</span></h2>
+<h2>Stand-up Tunes® <span class='tiny'>v0.9.2 - with ServiceWorker</span></h2>
 
 <div id="fbbutton" class="userpic"></div>
 
