--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<h2>Stand-up Tunes® <span class='tiny'>v0.9.2 - with ServiceWorker</span></h2>
+<h2>Stand-up Tunes® <span class='tiny'>v0.9.3</span></h2>
 
 <div id="fbbutton" class="userpic"></div>
 
@@ -26,12 +26,13 @@
 <fb:login-button scope="public_profile" onlogin="checkLoginState();">
 </fb:login-button> -->
 
-<div id="status">
+<!-- <div id="status">
 </div>
+ -->
 
-
-<div id="status">
-</div>
+<a href="#" id="vote" class="hidden">
+    Login with FB to vote...
+</a>
 
 <ul id="tunes-container"></ul>
 
