handle play time with crontab. write script on vote

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 <div id="upload-box">
     <div id="upload-area">
         <input type="file" id="file-box" accept="audio/*" style="display:none">
-        <input type="text" id="name-box" placeholder="Upload your own jingle! (mp3 and wav accepted - no change given)">
+        <input type="text" id="name-box" placeholder="Upload your own jingle! (mp3, wav, m4v, m4a)">
     </div>
     <div class="button" id="upload-button">
         Select File
