--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="/cookies.js"></script>
+<script src="/app.js"></script>
 <script src="/ui.js"></script>
 <script src="/util.js"></script>
 <script src="/client.js"></script>
