--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,10 @@
     <link rel="apple-touch-icon" sizes="76x76" href="images/touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="120x120" href="images/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="images/touch-icon-ipad-retina.png">
-
-
 </head>
 <body>
 
-<h2>Stand-up Tunes<span class='tiny'>v1.0</span></h2>
+<h2>Stand-up Tunes</h2>
 
 <p>Vote for your favorite jingle. Stand-up at <span id="play-time"></span>.</p>
 
@@ -25,18 +23,15 @@
 <div id="upload-box">
     <div id="upload-area">
         <input type="file" id="file-box" accept="audio/*" style="display:none">
-        <input type="text" id="name-box" placeholder="Upload your own jingle! (mp3, wav, m4v, m4a)">
+        <input type="text" id="name-box" placeholder="Upload your own jingle (mp3, wav, m4v, m4a)">
     </div>
     <div class="button" id="upload-button">
         Select File
     </div>
 </div>
 
-
-
 <script src="/socket.io/socket.io.js"></script>
 <script src="/cookies.js"></script>
-<script src="/app.js"></script>
 <script src="/ui.js"></script>
 <script src="/util.js"></script>
 <script src="/client.js"></script>
