--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 <h2>Stand-up Tunes</h2>
 
-<p>Vote for your favorite jingle. Stand-up at <span id="play-time"></span>.</p>
+<p>Vote for your favorite jingle. <span class="winner-name">mario.mp3</span> will play at <span id="play-time"></span>.</p>
 
 <ul id="tunes-container"></ul>
 
